# gsrb

./: .gitignore  CMakeLists.txt  README.md  benchmark.cu  benchmark_cuda.cu  benchmark_hip.cpp  csr_matrix.cpp  csr_matrix.h  gauss_seidel.cpp  gauss_seidel.cu  gauss_seidel.h  gauss_seidel_cuda.cu  gauss_seidel_hip.cpp  gauss_seidel_red_black.cu  gauss_seidel_red_black.h  main.cu  run.sh  switch_gpu_backend.h
src/: data_loader.cu  data_loader.h  definition.h  kernels.cu  kernels.h  main.cu  switch_gpu_backend.h  utils.cu  utils.h
